--- a/css/template.css
+++ b/css/template.css
@@ -70,11 +70,8 @@ body {
     border: 0;
     border-top: 1px solid #DDDDDD;
     border-bottom: 1px solid #fff;
-    border: #DDDDDD -moz-use-text-color #FFFFFF !important;
   }
   img {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
   }
   
@@ -82,16 +79,8 @@ body {
   /* 2. HEADER
   ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
   
-  #fav-containerwrap {
-    background: url('../images/wood_pattern.png') repeat ;
-  }
   #fav-container {
     background-color: #fff;
-    margin-top: 9px;
-    margin-bottom: 9px;
-    -moz-box-shadow: 0 0 6px 0 rgba(0,0,0,.47);
-    -webkit-box-shadow: 0 0 6px 0 rgba(0,0,0,.47);
-    box-shadow: 0 0 6px 0 rgba(0,0,0,.47);
   }
   #fav-headerwrap {
     margin-bottom: 9px;
@@ -210,12 +199,6 @@ body {
     padding: 14px 21px;
     margin: 0 0 0 5px;
     font-size: 14px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    -webkit-transition: all 200ms linear;
-    -moz-transition: all 200ms linear;
-    -o-transition: all 200ms linear;
     transition: all 200ms linear;
   }
   #fav-nav .navigation li a:before {
@@ -246,11 +229,6 @@ body {
     border: 1px solid #ddd;
     *border-right-width: 2px;
     *border-bottom-width: 2px;
-    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding;
     background-clip: padding-box;
   }
   .navigation ul.nav > li {
@@ -278,8 +256,6 @@ body {
   }
   #fav-nav .navigation .nav-pills .nav-child {
     padding-bottom: 0;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
     border-radius: 4px;
   }
   #fav-nav .navigation .nav-pills .nav-child a {
@@ -359,8 +335,6 @@ body {
       margin-left: 0;
       padding: 14px 0px;
       margin-top: 32px;
-      border-top: 1px solid #ddd;
-      border-bottom: 1px solid #ddd;
     }
     #fav-nav .moduletable ul.nav.menu {
       float: none;
@@ -484,11 +458,7 @@ body {
     .navbar-inverse .nav .active > a:focus,
     .navbar .nav .active > a:focus {
       background: none;
-      -webkit-box-shadow: none;
-      -moz-box-shadow: none;
       box-shadow: none;
-      -webkit-border-radius: 0;
-      -moz-border-radius: 0;
       border-radius: 0;
     }
   
@@ -511,8 +481,6 @@ body {
     div.navbar #fav-navbar-collapse li li li li[class^="item-"].current.active,
     div.navbar #fav-navbar-collapse li li li li[class*=" item-"].current.active {
       background-color: #eee!important;
-      -webkit-border-radius: 0;
-      -moz-border-radius: 0;
       border-radius: 0;
     }
     div.navbar #fav-navbar-collapse li li:hover,
@@ -555,8 +523,6 @@ body {
     }
     .navbar .btn-navbar .icon-bar {
       background-color: #444;
-      -webkit-box-shadow: 0 1px 0 #fff;
-      -moz-box-shadow: 0 1px 0 #fff;
       box-shadow: 0 1px 0 #fff;
     }
   
@@ -620,8 +586,6 @@ body {
     }
     div.navbar.navbar-inverse .btn-navbar .icon-bar {
       background-color: #f5f5f5;
-      -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
-      -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
       box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
     }
     #fav-navbar.navbar.navbar-inverse a.btn.btn-navbar {
@@ -815,8 +779,6 @@ body {
     padding: 0.3em 0.5em;
     display: block;
     border-radius: 4px;
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
     -o-transition: all 300ms linear;
     transition: all 300ms linear;
   }
@@ -1169,4 +1131,17 @@ body {
       position: relative;
     }
   
+  }
+
+  /* Maurice var extra */
+  .item-page ul li.latestnews-item::before {
+    content: '';
+    display: none;
+  }
+
+  @media (max-width: 767px) {
+    .item-page p img {
+      float: none !important;
+      width: 100%;
+    }
   }
