--- a/css/joomla.css
+++ b/css/joomla.css
@@ -86,10 +86,7 @@ License URI: http://www.gnu.org/copyleft/gpl.html
     width: 31.3%;
     margin-left: 3%;
   }
-  #fav-slide2.span4,
-  #fav-showcopyright.span3,
-  #fav-copyright.span3,
-  #fav-copyright2.span9 {
+  #fav-slide2.span4 {
     float: none;
     width: 100%;
     margin-left: 0;
@@ -2265,9 +2262,8 @@ a.text-success:hover { color: #356635; }
 ---------------------------------------------------------------------------- */
 
 blockquote {
-	font-family: Times, serif;
   padding-left: 0;
-	font-size: 1.2em;
+	font-size: 0.95em;
 	line-height: 1.2em;
 	border-left: none;
 	font-style: italic;
@@ -2276,13 +2272,12 @@ blockquote:before {
   font-family: FontAwesome;
   font-weight: normal;
   font-style: normal;
-  display: inline-block;
   text-decoration: inherit;
-  float:left;
-  font-size: 70px;
-  color: #ddd;
-  line-height: 1em;
+  float: left;
+  font-size: 31px;
+  color: #008282;
   margin-right: 0.5em;
+  margin-top: 0.3em;
   content: "\f10e";
 }
 blockquote p {
