--- a/css/joomla.css
+++ b/css/joomla.css
@@ -2618,7 +2618,7 @@ fieldset[disabled] .btn-danger.active {
 
 .btn-link {
   font-weight: normal;
-  color: #428bca;
+  color: #008282;
   cursor: pointer;
   border-radius: 0;
   background-image: none;
@@ -2641,7 +2641,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #2a6496;
+  color: #8CF000;
   text-decoration: underline;
   background-color: transparent;
 }
