Updated Page Bürgerwerke

--- a/css/template.css
+++ b/css/template.css
@@ -59,6 +59,9 @@ body {
     font-family: Open Sans, Helvetica, Arial, sans-serif;
     font-weight: 300!important;
   }
+  h4 {
+    margin-top: 3rem;
+  }
   h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
     text-decoration: none;
   }
